--- a/src/index.css
+++ b/src/index.css
@@ -213,6 +213,64 @@ margin-top:0.5rem ;
   justify-content: space-between;
 }
 
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat( auto-fit, minmax(300px, 1fr) );
+  gap: 1rem;
+}
+.card {
+  background-color: #fff9f9c7;
+  border-radius: 7px;
+  box-shadow: 0 4px 7px rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: column;
+  height: 22rem;
+  overflow: hidden;
+  width: 100%;
+  
+}
+
+.card-flag-container {
+  align-items: center;
+  height: 50%;
+}
+
+.card-flag {
+  display: block;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.card-info {
+  display: flex;
+  flex-direction: column;
+  height: 50%;
+  line-height: 1rem;
+  padding: 1.5rem;
+  font-family: 'Inter';
+}
+
+.card-info h2 {
+  font-size: 1.1rem;
+  margin-bottom: 1.2rem;
+}
+
+.card-info p {
+  font-size: .875rem;
+  font-weight: 600;
+  margin-bottom: .5rem;
+}
+
+.card-info span {
+  font-weight: 400;
+}
+
+@media screen and (max-width: 547px) {
+  .card {
+      max-width: 18rem;
+  }
+}
 
 @keyframes Fadein {
   0% {
